# textx-lang-json

./: CHANGELOG.md  README.md  main.py  model.dot  pyproject.toml
src/textxjson/: __init__.py  json.py
src/textxjson/grammar/: json.tx
tests/: maps_de.json  maps_en.json  maps_es.json  maps_fr.json  maps_zh.json  test.py
